# restful_fleet

./: README.md
restful_fleet_client/: CMakeLists.txt  package.xml  setup.cfg  setup.py
restful_fleet_client/launch/: fake_client.launch  restful_fleet_client.launch
restful_fleet_client/restful_fleet_client/: app.py  client.py  client_config.py  client_node.py  client_node_config.py  utilities.py
restful_fleet_client/scripts/: app.py  client.py  main.py
restful_fleet_client/scripts/restful_fleet_client/: client.py  client_config.py  client_node.py  client_node_config.py  utilities.py
restful_fleet_server/: package.xml  setup.cfg  setup.py
restful_fleet_server/config/: server_node_config.yaml
restful_fleet_server/launch/: restful_fleet_server.launch.py
restful_fleet_server/restful_fleet_server/: app.py  main.py  server.py  server_config.py  server_node.py  server_node_config.py
